feat: implement iteration 4 installation activities
